--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -1,28 +1,97 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>最短５日でダイバーデビュー！ - MdN DIVE</title>
   <meta name="description" content="MdN DIVEは千代田区にあるマンツーマンダイビングスクールです。5/31までWeb限定キャンペーンを実施中！">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
 
+<body>
   <header>
-    <h1></h1>
+    <h1>
+      <img src="img/logo.png" alt="MdN DIVE">
+    </h1>
   </header>
   <main>
-    <div class="mv-area">メインビジュアル</div>
-    <section></section>
-    <section></section>
-    <section></section>
-    <div class="form-img-area"></div>
+    <div class="mv-area">
+      <img src="img/photo_01.jpg" alt="この夏最後のキャンペーン！最短5日でダイバーデビュー！">
+    </div>
+    <section>
+      <div class="section-inner">
+        <h2>Web限定キャンペーン中！</h2>
+        <p>5/31までにWebでお申し込みいただいた方限定で、特別価格を実施中です。MdN DIVEは安心のマンツーマンレッスン！お友達との参加も可能です。仲間と一緒にダイビングライセンスを取得して、世界中の海を楽しみましょう！
+        </p>
+      </div>
+    </section>
+    <section>
+      <div class="section-inner">
+        <h2>ライセンス取得までの流れ</h2>
+        <ol>
+          <li>学科講習（5-6時間）</li>
+          <li>プール実習（1-2日）</li>
+          <li>海洋実習（2日）</li>
+          <li>筆記試験</li>
+        </ol>
+        <table>
+          <tr>
+            <th>料金に含まれるもの</th>
+            <td>教材費・実習費・器材レンタル代・ライセンス申請料</td>
+          </tr>
+          <tr>
+            <th>料金に含まれないもの</th>
+            <td>交通費・宿泊費・追加ダイブ費（希望者のみ）</td>
+          </tr>
+        </table>
+      </div>
+    </section>
+    <section class="section">
+      <div class="section-inner">
+        <h2 class="section-title">申し込みフォーム</h2>
+        <form action="program.php" method="post">
+          <dl>
+            <dt><label for="user-name">氏名</label></dt>
+            <dd>
+              <input type="text" name="user-name" id="user-name">
+            </dd>
+
+            <dt><label for="user-email">メールアドレス</label></dt>
+            <dd>
+              <input type="email" name="user-email" id="user-email">
+            </dd>
+
+            <dt>水泳経験はありますか</dt>
+            <dd>
+              <input type="radio" name="swim" id="swim-yes" value="はい"><label for="swim-yes">はい</label>
+              <input type="radio" name="swim" id="swim-no" value="いいえ"><label for="swim-no">いいえ</label>
+            </dd>
+          </dl>
+          <div class="form-submit">
+            <button type="submit" name="submit" id="submit">申し込む</button>
+            <!-- 送信ボタン
+              <input type="submit">
+            -->
+          </div>
+        </form>
+      </div>
+    </section>
+    <div class="form-img-area">
+      <img src="img/photo_02.jpg" alt="写真：サンゴ礁と熱帯魚">
+    </div>
   </main>
   <footer>
-    <address></address>
-    <small></small>
+    <address>
+      〒101-0051<br>
+      東京都千代田区神田神保町1丁目105<br>
+      00-0000-0000<br>
+      株式会社MdN DIVE
+    </address>
+    <small>&copy; MdN Corporation.</small>
   </footer>
-  
+
 </body>
+
 </html>
