--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -26,20 +26,22 @@
         <img src="img/heading_01.svg" alt="本書の特長">
       </h2>
 
-      <section class="feature_01">
-        <p class="feature_img"><img src="img/feature_01.png" alt=""></p>
-        <h3>「自分のペースで勉強しやすい！」</h3>
-        <p class="feature_text">
-          本書では、各記事ごとに15分、30分、60分・・・など、学習時間の目安を設けています。ちょっとした空き時間に少しずつ勉強したり、難しめのパートは集中して取り組んだり、自分のペースで学習していくことができます。</p>
-      </section>
+      <div class="feature-wrap">
+        <section class="feature_01">
+          <p class="feature_img"><img src="img/feature_01.png" alt=""></p>
+          <h3>「自分のペースで勉強しやすい！」</h3>
+          <p class="feature_text">
+            本書では、各記事ごとに15分、30分、60分・・・など、学習時間の目安を設けています。ちょっとした空き時間に少しずつ勉強したり、難しめのパートは集中して取り組んだり、自分のペースで学習していくことができます。</p>
+        </section>
+        <section class="feature_02">
+          <p class="feature_img"><img src="img/feature_02.png" alt=""></p>
+          <h3>「技術と理論の両方を習得できる！」</h3>
+          <p class="feature_text">
+            1冊の中で、手を動かして作ってみるパート（実践）と、読んで基本知識を身につけるパート（理論）の両方を交えています。HTMLやCSSの書き方・使い方はもちろん、「なぜ、必要なのか」「どうして、そう書くのか」も習得できます。
+          </p>
+        </section>
+      </div>
 
-      <section class="feature_02">
-        <p class="feature_img"><img src="img/feature_02.png" alt=""></p>
-        <h3>「技術と理論の両方を習得できる！」</h3>
-        <p class="feature_text">
-          1冊の中で、手を動かして作ってみるパート（実践）と、読んで基本知識を身につけるパート（理論）の両方を交えています。HTMLやCSSの書き方・使い方はもちろん、「なぜ、必要なのか」「どうして、そう書くのか」も習得できます。
-        </p>
-      </section>
       <p class="book-more"><a href="https://books.mdn.co.jp/books/3219203009/" target="_blank">出版社・本書紹介ページへ</a></p>
     </section>
 
@@ -82,19 +84,24 @@
   </main>
 
   <footer>
-    <p>初心者からちゃんとしたプロになる Webデザイン基礎入門</p>
-    <ul>
-      <li>発売日：2019-09-25</li>
-      <li>仕様：B5変型判／336P</li>
-      <li>ISBN：978-4-8443-6890-8</li>
-    </ul>
+    <div class="book-info">
+      <div class="book-info-wrap">
+        <p>初心者からちゃんとしたプロになる Webデザイン基礎入門</p>
+        <ul>
+          <li>発売日：2019-09-25</li>
+          <li>仕様：B5変型判／336P</li>
+          <li>ISBN：978-4-8443-6890-8</li>
+        </ul>
+      </div>
+    </div>
 
-    <ul>
-      <li><a href="https://www.facebook.com/mdnjp/" target="_blank"><img src="" alt="Facebook"></a></li>
-      <li><a href="https://twitter.com/MdN_WebBook/" target="_blank"><img src="" alt="Twitter"></a></li>
-    </ul>
-
-    <p class="copyright"><small>&copy; MdN Corporation.</small></p>
+    <div class="footer-info">
+      <ul>
+        <li><a href="https://www.facebook.com/mdnjp/" target="_blank"><img src="img/facebook.svg" alt="Facebook"></a></li>
+        <li><a href="https://twitter.com/MdN_WebBook/" target="_blank"><img src="img/twitter.svg" alt="Twitter"></a></li>
+      </ul>
+      <p class="copyright"><small>&copy; MdN Corporation.</small></p>
+    </div>
   </footer>
 
 
