--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,13 +10,20 @@
   <meta name="description" content="レンタルスペースMdNの公式ホームページです。">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  <a href="#">あいうえお</a>
-  <a href="#">かきくけこ</a>
+  <h2 class="h2-title">section title</h2>
+  <p>あいうえおあいうえおあいうえおあいうえおあいうえお</p>
+
+  <button class="btn btn-reserve">あいうえお</button>
+  <input type="submit" class="btn btn-reserve" value="ボタン">
+  <a href="#" class="btn btn-reserve">a要素</a>
   <header></header>
   <main>
     <section id="mv"></section>
@@ -28,4 +36,5 @@
   <footer></footer>
 
 </body>
+
 </html>
