PC,SPメニュー完成

--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -33,7 +33,7 @@
           <label for="gnav-input" id="gnav-open">
             <span></span>
           </label>
-          <label for="gnav-input" id="gnav-close" class="gnav-unshown">黒</label>
+          <label for="gnav-input" id="gnav-close" class="gnav-unshown"></label>
           <!-- ナビゲーション -->
           <div id="gnav-content">
             <ul class="gnav-menu">
@@ -48,7 +48,12 @@
 
       <!-- ナビ: デスクトップ用 -->
       <nav class="pc-only">
-        <ul class="gnav-menu"></ul>
+        <ul class="gnav-menu">
+          <li class="gnav-item"><a href="#service">Service<br>サービス</a></li>
+          <li class="gnav-item"><a href="#plan">Plan<br>プラン</a></li>
+          <li class="gnav-item"><a href="#access">Access<br>アクセス</a></li>
+          <li class="gnav-item"><a href="#contact">Contact<br>コンタクト</a></li>
+        </ul>
       </nav>
     </div>
   </header>
