レンタルスペース紹介のスタイルまで

--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -59,8 +59,23 @@
   </header>
 
   <main>
-    <section id="mv"></section>
-    <section id="info"></section>
+
+    <section id="mv" class="mv-area">
+      <h1 class="mv-title">気軽に利用できる<br class="sp-only">レンタルスペース</h1>
+      <button class="btn btn-reserve" type="button" onclick="location.href='https://google.co.jp'">Web予約はこちら</button>
+    </section>
+
+    <section id="info" class="info-area">
+      <div class="inner info-content">
+        <div class="info-txt">
+          <h2>利用人数や目的に<br class="sp-only">合わせて選べます</h2>
+          <p>レンタルスペースL7では、利用人数や利用目的に合わせてお部屋のタイプやご利用プランを選ぶことができます。少人数のミーティングから、100人規模のセミナーまで広く取り扱っております。<br>
+            見学やご相談も承っておりますので、まずは、お気軽にお問い合わせください。</p>
+        </div>
+        <img src="img/img-info.jpg" alt="レンタルスペースMdNロビーの写真">
+      </div>
+    </section>
+
     <section id="service"></section>
     <section id="plan"></section>
     <section id="access"></section>
