--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -176,9 +176,28 @@
       </div>
     </section>
 
-    <div class="pagetop"></div>
+    <div class="pagetop">
+      <a href="#mv">ページトップ</a>
+    </div>
+
   </main>
-  <footer></footer>
+
+  <footer class="foot-area">
+    <div class="inner">
+      <div class="logo-area foot-logo">
+        <img src="img/site-logo_w.svg" alt="rental space MdN">
+      </div>
+      <p class="txt-center">
+        見学やセミナーのご相談など<br class="sp-only">お気軽にご連絡ください。
+      </p>
+      <address class="text-phone">
+        TEL: <a href="tel:00-1234-5678">00-1234-5678</a>
+      </address>
+    </div>
+    <small class="foot-area_copy">
+      &copy; MdN Corporation.
+    </small>
+  </footer>
 
 </body>
 
