lesson9のメインビジュアルSPまで完了

--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -13,10 +13,7 @@
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
-    integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="js/script.js"></script>
+
 
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -46,6 +43,36 @@
     </nav>
   </header>
 
+  <div class="hero">
+    <h1>キャンプへ行こう！</h1>
+    <p>自然、山、空、緑。<br>日帰りでも楽しいキャンプの魅力を紹介！</p>
+  </div>
+
+  <div class="top-feature">
+    <div class="top-feature_box">
+      <h2>Go! CAMPについて</h2>
+      <p>Go!
+        CAMPは、都心からおそよ2時間で行ける、アクセス抜群のキャンプ場です。デイキャンプからオートキャンプ、BBQなど全６種類のサイト・エリアをご用意しております。<br>静かな環境を楽しむ「静謐の森」サイト、ファミリーや仲間とわいわい楽しむBBQ場にも隣接したAC電源付きオートキャンプサイトなど、さまざまな目的にあわせた施設をお楽しみください。
+      </p>
+      <a href="#">続きを読む</a>
+    </div>
+    <img src="img/photo-img01.jpg" alt="" width="530">
+  </div>
+  <div class="top-feature">
+    <div class="top-feature_box">
+      <h2>過ごし方</h2>
+      <p>
+        静かな環境を楽しむ「静謐の森」サイトでは、満天の星空や木々のせせらぎを満喫いただけます。AC電源付きオートキャンプサイトでは、大人数でのバーベキューに最適です。キャンピングカーでのお越しの方にも人気です。<br>アクティビティ面では、釣り堀、川原での水遊び（夏季のみ）、四季を通じて楽しめるトレッキングコースなどさまざまな楽しみ方を提供しております。
+      </p>
+      <a href="#">続きを読む</a>
+    </div>
+    <img src="img/photo-img02.jpg" alt="" width="530">
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+    integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
