TOPページ特徴〜フッターまで完了

--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -69,6 +69,52 @@
     <img src="img/photo-img02.jpg" alt="" width="530">
   </div>
 
+  <section>
+    <h2 class="heading-title">News</h2>
+    <ul class="top-list">
+      <li>
+        <a href="news/index.html">
+          <img src="img/photo-thumb01.jpg" alt="" width="120">
+          <div class="top-list_info">
+            <time>2019年12月26日</time>
+            <p class="top-list_title">クリスマスイベントを開催しました</p>
+          </div>
+        </a>
+      </li>
+      <li>
+        <a href="news/index.html">
+          <img src="img/photo-thumb02.jpg" alt="" width="120">
+          <div class="top-list_info">
+            <time>2019年12月11日</time>
+            <p class="top-list_title">お正月イベントのお知らせ</p>
+          </div>
+        </a>
+      </li>
+      <li>
+        <a href="news/index.html">
+          <img src="img/photo-thumb03.jpg" alt="" width="120">
+          <div class="top-list_info">
+            <time>2019年12月1日</time>
+            <p class="top-list_title">クリスマスプレゼント抽選会のお知らせ</p>
+          </div>
+        </a>
+      </li>
+      <li>
+        <a href="news/index.html">
+          <img src="img/photo-thumb04.jpg" alt="" width="120">
+          <div class="top-list_info">
+            <time>2019年11月10日</time>
+            <p class="top-list_title">年末年始営業時間および休業のお知らせ</p>
+          </div>
+        </a>
+      </li>
+    </ul>
+  </section>
+
+  <footer>
+    <small>&copy; MdN Corporation.</small>
+  </footer>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
     integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
