--- a/lesson9/faq/index.html
+++ b/lesson9/faq/index.html
@@ -1,13 +1,73 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>よくある質問 - Go! CAMP</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="../css/style.css">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+  <link rel="manifest" href="../favicon/site.webmanifest">
+  <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 </head>
+
 <body>
-  
+  <header>
+    <a href="../" class="header-logo">
+      <img src="../img/logo.svg" alt="Go! CAMP" width="240">
+    </a>
+    <button class="header-button" type="button">
+      <span class="icon"></span>
+    </button>
+    <nav class="header-gnav">
+      <ul>
+        <li><a href="../index.html">トップページ</a></li>
+        <li><a href="#">Go! CAMPについて</a></li>
+        <li><a href="./">NEWS</a></li>
+        <li><a href="../faq/index.html">よくある質問</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <h1 class="heading-title">よくある質問</h1>
+
+  <section class="faq-section">
+    <div class="faq-content">
+      <h2>ゴミは捨てられますか？</h2>
+      <p>
+        ペットボトル、ビン・カン、生ごみ、可燃ごみ、プラスチック、不燃ごみに分別後、指定のゴミ捨て場にお出しください。<br>
+        当地域の粗大ごみに分類されるごみはお持ち帰りとなりますのでご了承ください。ゴミの持ち込みはご遠慮くださるようお願いいたします。
+      </p>
+    </div>
+    <div class="faq-content">
+      <h2>駐車場について</h2>
+      <p>
+        駐車場は3箇所ございます。地図をご参照ください。夏期はたいへん混み合いますので、各種交通機関もご利用ください。<br>
+        駐車場内で起きました事故、トラブル等については一切の責任を負いかねます。
+      </p>
+    </div>
+  </section>
+
+  <footer>
+    <small>&copy; MdN Corporation.</small>
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+    integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="../js/script.js"></script>
 </body>
+
 </html>
